# salty-android

./: .gitignore  .mcp.json  CLAUDE.md  MIGRATION.md  README.md  gradle.properties  settings.gradle.kts  skills-lock.json
.claude/: settings.json
.claude/commands/: audit.md  commit.md
.claude/plans/: 00-foundation-parity.md  README.md
.claude/rules/: lessons.md  simplicity.md  workflow.md
.claude/skills/: android-kotlin
.claude/skills/audit-ios-parity/: SKILL.md
.claude/skills/verify-build/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ndbcstations.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  zarr_shader_host.cpp  zarr_shader_host.h
app/src/main/res/drawable/: ic_antenna.xml  ic_ferry.xml  ic_grid.xml  ic_hexagon.xml  ic_layers.xml  ic_mappin.xml  ic_mappin_circle.xml  ic_mountain.xml  ic_satellite.xml  ic_shield.xml  ic_trophy.xml  ic_water_waves.xml  ic_wind.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: DESIGN_SYSTEM.md  LESSONS_LEARNED.md  WAYPOINT_MIGRATION.md
docs/plans/: 2026-03-21-ios-parity-phases.md  2026-03-27-satellite-tracker.md  PROGRESS.md
docs/plans/phases/: phase-1-app-shell.md  phase-10-stations-weather.md  phase-2-rendering-config.md  phase-3-presets.md  phase-4-colorscale-variables.md  phase-5-overlay-datasets.md  phase-6-waypoints.md  phase-7-measurement.md  phase-8-announcements.md  phase-9-route-recording.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+304 files in other folders)
